overflow issues handled

--- a/portfolio.css
+++ b/portfolio.css
@@ -42,7 +42,7 @@ body {
   height: 94vh;
   width: 50%;
   background-color: rgb(121, 52, 185);
-  display: flex;
+  display: none;
   flex-direction: column;
   justify-content: start;
   align-items: center;
@@ -83,7 +83,7 @@ body {
   justify-content: center;
   align-items: start;
   background-image: url(intro.jpg);
-  /* background-position: center; */
+  background-position: center;
   background-size: cover;
 }
 .left_section1 {
@@ -114,11 +114,11 @@ body {
   align-items: center;
 }
 .cover {
-  position: absolute;
-  width: 100%;
-  height: 100%;
+  position: relative;
+  display: none;
+  width: inherit;
+  height: inherit;
   border-radius: 20px;
-  display: flex;
   align-items: center;
   justify-content: space-evenly;
   flex-direction: column;
@@ -130,13 +130,16 @@ body {
   text-decoration: underline;
 }
 .skill:hover{
+  
   .cover{
     animation: hoverEffect 1s linear 1 forwards;
+    position: absolute;
+    display: flex;
   }
 }
 
 @keyframes hoverEffect {
-  form{
+  from{
     z-index: -2;
     
   }
@@ -152,7 +155,7 @@ body {
   color: rgb(32 103 218);
 }
 .skill {
-  position: relative;
+  position: static;
   width: 32%;
   height: 400px;
   min-height: 300px;
@@ -190,17 +193,21 @@ body {
   align-items: center;
 }
 .projects {
+  width : 47%;
   height: 500px;
-  width: 500px;
   border: 2px solid rgb(27, 72, 57);
   border-radius: 20px;
   padding: 10px;
   background-color: rgb(83 164 108);
   box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 .open_Source {
+  width : 47%;
   height: 500px;
-  width: 500px;
   border: 2px solid rgb(27, 72, 57);
   border-radius: 20px;
   padding: 10px;
@@ -211,6 +218,8 @@ body {
   align-items: center;
   font-size: 1.3rem;
   box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22);
+  gap: 10px; 
+  
 }
 .webs {
   width: 100%;
@@ -220,6 +229,7 @@ body {
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
+  gap: 10px;
 }
 .apps {
   width: 100%;
@@ -229,6 +239,7 @@ body {
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
+  gap: 10px;
 }
 
 .webs h3,
@@ -333,6 +344,10 @@ textarea {
   .left_section1 {
     font-size: 1.2rem;
   }
+  .menue {
+    display: flex;
+    width: 100%;
+  }
   #menue_bar {
     display: inline-block;
   }
@@ -353,6 +368,7 @@ textarea {
   .section4 {
     flex-direction: column;
     height: auto;
+    gap: 2px;
   }
   .projects {
     width: 100%;
@@ -375,6 +391,7 @@ textarea {
 
   .left_desc {
     gap: 20px;
+    height: auto;
   }
   .right {
     height: 50%;
@@ -382,6 +399,22 @@ textarea {
   }
   .footer {
     flex-direction: column;
+  }
+  *.section4 h3,h5,p{
+    font-size: 1.3rem;
+    
+  }
+  .projects{
+
+    gap: 20px;
+  }
+}
+@media (min-width: 500px) and (max-width:755px) {
+  *.section4 h3,h5,p{
+    font-size: 1.1rem;
+  }
+  .webs ,.apps,.open_Source{
+    gap: 2px;
   }
 }
 
@@ -391,4 +424,5 @@ textarea {
 
 #check:checked~ .menue {
  transform: translateX(0%);
+
 }
